# BCJRFormer

./: .flake8  .gitignore  LICENSE  Makefile  README.md  eval.py  main.py  pyproject.toml
bcjrformer/: channels.py  model_builder.py  trellis.py  utils.py
bcjrformer/bcjr/: cc_bcjr_ids_ldpc.py  marker_bcjr_ids_ldpc.py
bcjrformer/cli/: app.py
bcjrformer/code_db/: HAMMING_N7_K4.txt  LDPC_N240_K120.alist  LDPC_N273_K191.alist  LDPC_N32_K16.alist  LDPC_N648_K540.alist  LDPC_N64_K32_QC_NB.alist  LDPC_N64_K32_QC_NB_CC.alist  LDPC_N64_K32_QC_NB_FIXED_WEIGHTS.alist  LDPC_N96_K48.txt  README.md
bcjrformer/codes/: convolutional_code.py  decoding_params.py  galois_field.py  linear_code.py  marker_code.py
bcjrformer/configs/: build_run_name_util.py  channel_config.py  code_config.py  evaluation_config.py  inner_model_config.py  model_config.py  specific_model_config.py  utils.py
bcjrformer/datasets/: bcjrformer_dataset.py  ids_ecct_outer_dataset.py
bcjrformer/models/: bcjrformer.py  comb_cc_bcjrformer.py  convbcjrformer.py  ids_ecct_outer_model.py  modules.py
bcjrformer/trainers/: base_trainer.py  bcjrformer_comb_cc_trainer.py  bcjrformer_marker_trainer.py  bcjrformer_trainer.py  convbcjrformer_trainer.py  ecct_marker_bcjrformer_separate_e2e_trainer.py  ids_ecct_outer_trainer.py  nb_bcjrformer_marker_trainer.py
configs/code/: code_config_hamming.yaml  code_config_ldpc_204_102_marker.yaml  (+3 more)
eval_scripts/: evaluate_dynamic_sequence_bcjrformer.py  evaluate_inner_bcjrformer_outer_bp.py
thesis/: bibliofile.bib  cross_mask.txt  master_thesis.tex
(+52 files in other folders)
